# iscc-observer-utxo

./: .env.dev  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
iscc_observer_utxo/: __init__.py  __main__.py  chain.py  settings.py
tests/: test_iscc_observer_utxo.py
